feat: Implementar prompts 1-6 de mejoras PYMERP - Customer fixes, Location assignment, Purchase multi-item, Sales KPIs, PDF templates, Captcha optional + Account monitoring